--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,9 +10,9 @@ body {
   background-position: center;
 }
 
-/* .label-text {
+.label-text {
   color: white;
-} */
+}
 
 /* dark mode looking scrollbar */
 /* ::-webkit-scrollbar {
