--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,31 +15,31 @@ body {
 }
 
 /* dark mode looking scrollbar */
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 8px;
-} */
+}
 
-/* ::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background: #555;
-} */
+}
 
-/* ::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background: #121212;
   border-radius: 5px;
-} */
+}
 
-/* ::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
   background: #242424;
-} */
+}
 
-/* .shake {
+.shake {
   animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) 0.2s both;
   transform: translate3d(0, 0, 0);
   backface-visibility: hidden;
   perspective: 1000px;
-} */
+}
 
-/* @keyframes shake {
+@keyframes shake {
   10%,
   90% {
     transform: translate3d(-1px, 0, 0);
@@ -60,4 +60,4 @@ body {
   60% {
     transform: translate3d(4px, 0, 0);
   }
-} */
+}
